use sqlite to store and retrieve data

--- a/HnTrends/appsettings.json
+++ b/HnTrends/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileLocations": {
+    "Database":  "C:\\git\\csharp\\hn-reader\\hn-data.sqlite" 
+  } 
 }
