use lucene to search data
since our basic search with sqlite was too slow we instead use lucene to search the data.

--- a/Reader/Reader.csproj
+++ b/Reader/Reader.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.111" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HnTrends.Indexer\HnTrends.Indexer.csproj" />
+  </ItemGroup>
+
 </Project>
