create new crawler project
project contains shared logic for reading from the hn api so that both the console runner and web background task can share the same code and write to the same file.

--- a/src/HnTrends.ConsoleCrawler/HnTrends.ConsoleCrawler.csproj
+++ b/src/HnTrends.ConsoleCrawler/HnTrends.ConsoleCrawler.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AngleSharp" Version="0.13.0-alpha-768" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HnTrends.Crawler\HnTrends.Crawler.csproj" />
   </ItemGroup>
 
 </Project>
