--- a/src/HnTrends.Crawler/HnTrends.Crawler.csproj
+++ b/src/HnTrends.Crawler/HnTrends.Crawler.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HnTrends.Indexer\HnTrends.Indexer.csproj" />
+    <ProjectReference Include="..\HnTrends.Core\HnTrends.Core.csproj" />
+    <ProjectReference Include="..\HnTrends.Database\HnTrends.Database.csproj" />
   </ItemGroup>
 
 </Project>
