update time to preserve hn format
time is recorded in seconds from unix timestamp rather than ticks and stored in sqlite in the same way. post counts cache is updated to use the new database tables.

--- a/src/HnTrends/HnTrends.csproj
+++ b/src/HnTrends/HnTrends.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HnTrends.Core\HnTrends.Core.csproj" />
+    <ProjectReference Include="..\HnTrends.Database\HnTrends.Database.csproj" />
     <ProjectReference Include="..\HnTrends.Indexer\HnTrends.Indexer.csproj" />
   </ItemGroup>
 
