--- a/src/HnTrends/appsettings.json
+++ b/src/HnTrends/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "FileLocations": {
-    "Database":  "C:\\git\\csharp\\hn-reader\\hn-data.sqlite" 
+    "Database":  "C:\\git\\csharp\\hn-reader\\data\\hn-data.sqlite" 
   } 
 }
