add month support to trend plot
trends now support swapping between day, week and month values for both % and count.

tidies up appearance of the front end.

adds index location to the appsettings.

--- a/src/HnTrends/appsettings.json
+++ b/src/HnTrends/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "FileLocations": {
-    "Database":  "C:\\git\\csharp\\hn-reader\\data\\hn-data.sqlite" 
+    "Database":  "C:\\git\\csharp\\hn-reader\\data\\hn-data.sqlite",
+    "Index":  "C:\\git\\csharp\\hn-reader\\index" 
   } 
 }
