--- a/src/HnTrends/appsettings.json
+++ b/src/HnTrends/appsettings.json
@@ -6,7 +6,10 @@
   },
   "AllowedHosts": "*",
   "FileLocations": {
-    "Database":  "C:\\git\\csharp\\hn-reader\\data\\hn-data.sqlite",
-    "Index":  "C:\\git\\csharp\\hn-reader\\index" 
-  } 
+    "Database": "C:\\git\\csharp\\hn-reader\\data\\hn-data.sqlite",
+    "Index": "C:\\git\\csharp\\hn-reader\\index"
+  },
+  "Timing": {
+    "MinutesBetweenRun":  1 
+  }
 }
