--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -29,7 +29,7 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ""
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           rm: true
           source: "site/"
           target: "${{ secrets.REMOTE_DIR }}"
