--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Deploy files
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: sudo service supervisor stop && rm -rf /var/hn-trend/website/ && cp -a /home/eliot/hn-trend-deploy/site/. /var/hn-trend/website/ && chown -R www-data /var/hn-trend/website/ && sudo service supervisor start
+          command: sudo service supervisor stop && rm -rf /var/hn-trend/website/ && rm -rf /var/hn-trend/index/ && cp -a /home/eliot/hn-trend-deploy/site/. /var/hn-trend/website/ && chown -R www-data /var/hn-trend/website/ && sudo service supervisor start
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           privateKey: ${{ secrets.SSH_KEY }}
