--- a/src/HnTrends/appsettings.json
+++ b/src/HnTrends/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AllowedHosts": "*",
   "FileLocations": {
-    "Database": "C:\\git\\csharp\\hn-reader\\data\\hn-data.sqlite",
-    "Index": "C:\\git\\csharp\\hn-reader\\index"
+    "Database": "C:\\git\\csharp\\hn-trends\\data\\hn-data.sqlite",
+    "Index": "C:\\git\\csharp\\hn-trends\\index"
   },
   "Timing": {
     "MinutesBetweenRun":  60 
