update to use full text search, needs microsoft.data.sqlite reference
remove unused code and use full text search for results from web app

rework loading trends and css

--- a/src/HnTrends.Database/HnTrends.Database.csproj
+++ b/src/HnTrends.Database/HnTrends.Database.csproj
@@ -5,7 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
+    <None Remove="migrations\*.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="migrations\*.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.11" />
   </ItemGroup>
 
   <ItemGroup>
