--- a/src/HnTrends/web/package.json
+++ b/src/HnTrends/web/package.json
@@ -10,5 +10,8 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.11.2"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {
+    "moment": "^2.29.1"
+  }
 }
