--- a/src/HnTrends/web/src/App.fsproj
+++ b/src/HnTrends/web/src/App.fsproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Fable.Browser.Dom" Version="2.2.0" />
     <PackageReference Include="Fable.Core" Version="3.2.3" />
     <PackageReference Include="Fable.Fetch" Version="2.4.0" />
+    <PackageReference Include="Fable.MomentJs" Version="2.0.4.23973" />
     <PackageReference Include="Fable.Promise" Version="3.1.1" />
   </ItemGroup>
 </Project>
